[gd_scene load_steps=3 format=2]

[ext_resource path="res://Gui/Fireworks.gd" type="Script" id=1]
[ext_resource path="res://Gui/FireworksParticles.tscn" type="PackedScene" id=2]

[node name="Fireworks" type="Spatial"]
script = ExtResource( 1 )

[node name="FireworksParticles" parent="." instance=ExtResource( 2 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.98266 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="EmitTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="EmitTimer" to="." method="_on_EmitTimer_timeout"]
